More glow higlighting. Fix bug with sankey tooltips not showing latest. Larger slider ranges.

--- a/css/slider.css
+++ b/css/slider.css
@@ -1,7 +1,7 @@
 .ui-slider-horizontal {
     margin-top: 2px;
     height: 10px;
-    width: 350px;
+    width: 400px;
 }
 
 .ui-slider .ui-slider-handle {
