--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ body {
 }
 
 .inputs {
-    width: 720px;
+    width: 770px;
 }
 
 #bayes-rule-view {
